[gd_scene load_steps=4 format=3 uid="uid://b0fdsbrgmhqyk"]

[ext_resource type="Script" path="res://Scripts/rocket_counter.gd" id="1_jx8t5"]
[ext_resource type="Texture2D" uid="uid://b0s1r51slfwgp" path="res://Sprites/Placeholder/PlaceholderWindowLight.png" id="2_fsno0"]
[ext_resource type="Texture2D" uid="uid://b0ncv4mik55h4" path="res://Sprites/Placeholder/PlaceholderRocket.png" id="3_lst3c"]

[node name="RocketCounter" type="MarginContainer"]
offset_right = 80.0
offset_bottom = 36.0
script = ExtResource("1_jx8t5")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_fsno0")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="InnerMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InnerMargin"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="ProgressLabel" type="Label" parent="InnerMargin/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "100"
horizontal_alignment = 2

[node name="PercentLabel" type="Label" parent="InnerMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "%"
horizontal_alignment = 2

[node name="RocketIcon" type="TextureRect" parent="InnerMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("3_lst3c")
stretch_mode = 3
